# Link-Analysis

./: .gitignore  CMakeLists.txt  README.md  link-analysis.sublime-project
HITS/: main.cpp
SALSA/: main_m1.cpp  main_m2.cpp
dataset/: README.txt
dataset/_abortion/graph/: inv_adj_list
dataset/_affirmative_action/graph/: inv_adj_list
dataset/_alcohol/graph/: inv_adj_list  nodes
dataset/_amusement_parks/graph/: inv_adj_list
dataset/_architecture/graph/: inv_adj_list
dataset/_armstrong/graph/: inv_adj_list
dataset/_automobile_industries/graph/: inv_adj_list  nodes
dataset/_basketball/graph/: inv_adj_list
dataset/_blues/graph/: inv_adj_list
dataset/_cheese/graph/: inv_adj_list  nodes
dataset/_classical_guitar/graph/: inv_adj_list
dataset/_complexity/graph/: inv_adj_list
dataset/_computational_complexity/graph/: inv_adj_list
dataset/_computational_geometry/graph/: inv_adj_list
dataset/_death_penalty/graph/: inv_adj_list
dataset/_genetic/graph/: inv_adj_list
dataset/_geometry/graph/: inv_adj_list  nodes
dataset/abortion/: adj_list  nodes
dataset/computational_complexity/: adj_list  nodes
dataset/computational_geometry/: adj_list
dataset/death_penalty/: adj_list  nodes
dataset/genetic/: adj_list  nodes
dataset/gun_control/: adj_list  nodes
dataset/movies/: adj_list  nodes
dataset/net_censorship/: adj_list
dataset/test/: adj_list
lib/: CMakeLists.txt  Graph.cpp  Graph.h  Graph.hpp  UnionSet.cpp  UnionSet.h  UnionSet.hpp  basic_service.hpp  export_service.cpp  export_service.h  union_set.hpp
result/: AP.xlsx  MAP.xlsx  MRR.xlsx  RR.xlsx  dataset_size.xlsx
script/: measure.py
src/: CMakeLists.txt  HITS.cpp  SALSA.cpp  SALSA_deprecated.cpp  SALSA_m1.cpp  SALSA_m2.cpp
(+19 files in other folders)
